Bug Fixed - JumpAbove Hit

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ canvas {
 
 .overlay {
   position: absolute;
-  top: 0;
+  top: 255px;
   left: 0;
   width: 100%;
   height: 100%;
@@ -87,4 +87,8 @@ canvas {
   max-height: 720px;
   max-width: 480px;
   padding-top: 100px;
+}
+
+.imgSize {
+  width: 255px;
 }
